--- a/index.html
+++ b/index.html
@@ -5,10 +5,35 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Honda Banzai</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/reset.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/main.css'>
     <script src='js/main.js'></script>
 </head>
 <body>
+    <div class="header">
+    </div>
+    <div class="logo-honda">
+        <img src="img/logo.png" />
+    </div>
+    <div class="central-de-atendimento">
+        <p>Central de Atendimento</p>
+        <p>(31) 3123-1234</p>
+    </div>
+    <div class="civic-exl">
+        <img src="img/Civic_EXL_2017_3_4_Lado_A_Preto_72dpi.png" />
+    </div>
+    <div class="civic-10-geracao">
+        <img src="img/Grupo 98.svg" />
+    </div>
+    <div class="form">
+        <div class="form-title">
+            <img src="img/icon-phone-calling.svg" />
+            <div class="form-title-collumn">
+                <p>Solicitar um</p>
+                <p>CONTATO</p>
+            </div>
+        </div>     
+    </div>
     
 </body>
 </html>
