--- a/index.html
+++ b/index.html
@@ -32,7 +32,37 @@
                 <p>Solicitar um</p>
                 <p>CONTATO</p>
             </div>
+        </div>
+        <div class="form-inputs">
+            <input placeholder="Nome">
+            <input placeholder="E-mail">
+            <input placeholder="Telefone">
+            <select>Escolha o horário</select>
+            <select>Escolha a unidade</select>
+            <button>AGENDAR TEST DRIVE</button>
         </div>     
+    </div>
+    <div class="slogan">
+        <p>A EMOÇÃO DE DIRIGIR LEVA VOCÊ MAIS LONGE</p>
+    </div>
+    <div class="banner-dois-carros">
+        <img src="img/juntosi.png"/>
+    </div>
+    <div class="text-info">
+        <p>O novo Civic Geração 10 traz um design único mudando a categoria de sedãs para sempre. Ele garante a melhor dirigibilidade com o máximo em sofisticação e conforto, atribuído por seu design interno e diferenciada ergonomia.</p>
+    </div>
+    <div class="imagem-dentro-carro">
+        <p>PREPARE-SE PARA ALGO REALMENTE NOVO</p>
+        <p>O Novo Civic Geração 10 vem completo de série. Conheça a versão perfeita para você.</p>
+    </div>
+    <div class="slider">
+        <div class="slider-item">
+            <img src="img/07-DIRECAO_ELETRICA.png">
+        </div>
+        <div class="slider-buttons">
+            <a></a>
+            <a></a>
+        </div>
     </div>
     
 </body>
