--- a/index.html
+++ b/index.html
@@ -56,12 +56,48 @@
         <p>O Novo Civic Geração 10 vem completo de série. Conheça a versão perfeita para você.</p>
     </div>
     <div class="slider">
+        <div class="slider-buttons">
+            <a><img src="img/keyboard-right-arrow-button.svg" /></a>
+            <a><img src="img/keyboard-right-arrow-button.svg" /></a>
+        </div>
         <div class="slider-item">
             <img src="img/07-DIRECAO_ELETRICA.png">
         </div>
-        <div class="slider-buttons">
+        <div class="slider-information">
+            <p>Direção com Assistência</p>
+            <p>Sistema de estabilidade reforça automaticamente o retorno da direção, auxiliando o motorista em situações onde o carro está ameaçado de instabilidade.</p>
+        </div>
+        <div class="slider-elipses" style="display: none;">
+            <a><img src="img/keyboard-right-arrow-button.svg" /></a>
+            <a><img src="img/keyboard-right-arrow-button.svg" /></a>
+        </div>
+    </div>
+    <div class="banner-honda-acord">
+        <p>PRONTO PARA TER UM HONDA?</p>
+        <p>Conheça os últimos grandes lançamentos da honda.</p>
+        <div class="banner-honda-acord-accordion">
+            <img src="img/accord.png"/>
             <a></a>
-            <a></a>
+        </div>
+        <button class="banner-honda-acord-button">CONHEÇA MAIS</button>
+    </div>
+    <div class="find">
+        <div class="find-button">
+            <img src="img/facebook-placeholder-for-locate-places-on-maps-2.svg"/>
+            <div>
+                <p>Encontre uma</p>
+                <p>CONCESSIONÁRIA</p>
+            </div>
+        </div>
+        <div class="find-button">
+            <div>
+                <p>CENTRAL DE ATENDIMENTO</p>
+                <p>(31) 3123-1234</p>
+            </div>
+        </div>
+        <p class="find-follow">SIGA A BANZAI NAS REDES SOCIAIS</p>
+        <div class="find-icons">
+
         </div>
     </div>
     
