--- a/index.html
+++ b/index.html
@@ -97,7 +97,11 @@
         </div>
         <p class="find-follow">SIGA A BANZAI NAS REDES SOCIAIS</p>
         <div class="find-icons">
-
+            <div>
+                <a class="find-icons-circle" href="#"><img src="img/Caminho 87.svg" /></a>
+                <a class="find-icons-circle" href="#"><img src="img/Caminho 88.svg" /></a>
+                <a class="find-icons-circle" href="#"><img src="img/Grupo 81.svg" /></a>
+            </div>
         </div>
     </div>
     
